# sbomit-generator-server

./: .gitignore  Dockerfile  README.md  disambiguate.py  docker-compose.yml  parse_makefile.py  pipeline_api.py  run_pipeline.py  run_pipeline.sh  sbomit_run  server.py  test_makefile_parser.py
evaluation/: run_full_eval.py  sbomit_full_evaluation.csv  sbomit_full_evaluation_v4.csv
evaluation/records/: argo-cd.json  flux2.json  gittuf.json  go-tuf.json  intoto.json  kyverno.json  protobom.json  python-tuf.json  rust-tuf.json  sbomit.json
evaluation/sboms_ptrace_only/: sbom-argo-cd-ptrace.spdx.json  sbom-flux2-ptrace.spdx.json  sbom-gittuf-ptrace.spdx.json  sbom-go-tuf-ptrace.spdx.json  sbom-intoto-ptrace.spdx.json  sbom-kyverno-ptrace.spdx.json  sbom-protobom-ptrace.spdx.json  sbom-python-tuf-ptrace.spdx.json  sbom-rust-tuf-ptrace.spdx.json  sbom-sbomit-ptrace.spdx.json
scripts/: analyze_step_coverage.py
wrapper/: INSTALL.md  install.sh
wrapper/gh-sbomit/: README.md  gh-sbomit
wrapper/homebrew-sbomit/: README.md
wrapper/homebrew-sbomit/Formula/: sbomit-init.rb
wrapper/npm-sbomit/: package.json
wrapper/pip-sbomit/: pyproject.toml
wrapper/pip-sbomit/sbomit_init/: cli.py
wrapper/server-go/: server.go
